--- a/index.html
+++ b/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
-     <link href="style.css" rel="stylesheet" >
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="left_side">
+        <div class="top_left_side">
+            <a href=""><img class="twitter_icon" src="imgs/Twitter-logo.svg.webp"></a>
+            <div class="top_nav">
+                <a class="icon_container" href="">
+                    <span class="material-icons"> home </span>
+                    <!-- <i class="material-icons"> home </i> used to indicate a technical term ,there is not a more appropriate semantic element  -->
+                    <span>Home</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons"> tag </span>
+                    <span>Explore</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons note"> notifications </span>
+                    <span>Notifications</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons"> mail_outline </span>
+                    <span>Messages</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons "> bookmark_border</span>
+                    <span>Bookmarks</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons"> list_alt </span>
+                    <span>Lists</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons"> person_outline </span>
+                    <span>Profile</span>
+                </a>
+                <a class="icon_container" href="">
+                    <span class="material-icons"> more_horiz </span>
+                    <span>More</span>
+                </a>
+                <button class="tweet_button">Tweet</button>
+            </div>
+        </div>
+        <!-- <div class="bottom_left_side">
+            <img src="imgs/unnamed.webp" alt="failed_load">
+            <span>ZaYnab</span>
+            <span>@zaynab3ibrahim</span>
+            <a href="">
+                <span class="material-icons"> more_horiz </span>
+            </a>
+
+        </div> -->
+    </header>
+    <div class="main_section">
+        fggggggggggggggg
+        facere dolores obcaecati, atque omnis eligendi consequuntur. Nam, a!
+    </div>
+
+    <div class="right_side">
+        <div class="serach_box"><input type="text"></div>
+        <div class="trending_box"></div>
+        <div class="follow_box"></div>
+        <footer></footer>
+    </div>
 </body>
+
 </html>
