--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
                 <button class="tweet_button">Tweet</button>
             </div>
         </div>
-        <!-- <div class="bottom_left_side">
-            <img src="imgs/unnamed.webp" alt="failed_load">
-            <span>ZaYnab</span>
-            <span>@zaynab3ibrahim</span>
-            <a href="">
-                <span class="material-icons"> more_horiz </span>
-            </a>
-
-        </div> -->
+        <div class="bottom_left_side">
+            <div class="bottom_left_side_box">
+                <div>
+                <img src="imgs/unnamed.webp" alt="failed_load" style="width: 45px; height: 45px; border-radius: 50%;">
+            </div>
+            <div class="account_name">
+                <div style="font-weight: 600;">ZaYnab</div>
+                <div style="font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">@zaynab3ibrahim</div>
+            </div>
+            <div>
+                <a href="">
+                    <span class="material-icons"> more_horiz </span>
+                </a>
+            </div>
+        </div>
+        </div>
     </header>
     <div class="main_section">
         fggggggggggggggg
