midde section(home box)

--- a/index.html
+++ b/index.html
@@ -56,23 +56,32 @@
         <div class="bottom_left_side">
             <div class="bottom_left_side_box">
                 <div>
-                <img src="imgs/unnamed.webp" alt="failed_load" style="width: 45px; height: 45px; border-radius: 50%;">
+                    <img src="imgs/unnamed.webp" alt="failed_load"
+                        style="width: 45px; height: 45px; border-radius: 50%;">
+                </div>
+                <div class="account_name">
+                    <div style="font-weight: 600;">ZaYnab</div>
+                    <div style="font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">@zaynab3ibrahim</div>
+                </div>
+                <div>
+                    <a href="">
+                        <span class="material-icons"> more_horiz </span>
+                    </a>
+                </div>
             </div>
-            <div class="account_name">
-                <div style="font-weight: 600;">ZaYnab</div>
-                <div style="font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">@zaynab3ibrahim</div>
-            </div>
-            <div>
-                <a href="">
-                    <span class="material-icons"> more_horiz </span>
-                </a>
-            </div>
-        </div>
         </div>
     </header>
+
     <div class="main_section">
-        fggggggggggggggg
-        facere dolores obcaecati, atque omnis eligendi consequuntur. Nam, a!
+        <div class="home_box">
+                <div style="font-size: 17px; font-weight: 600; line-height: 20px; ">Home</div>
+           
+                <div class="inner_home_box">
+                    <span class="for_you" style="width: 50% ; text-align: center; padding-top: 15px;">For you</span>
+                    <span class="following" style="width: 50%; text-align: center;padding-top: 15px">Following</span>
+                </div>
+            
+        </div>
     </div>
 
     <div class="right_side">
@@ -81,6 +90,7 @@
         <div class="follow_box"></div>
         <footer></footer>
     </div>
+
 </body>
 
 </html>
