middleSection(feed posts box)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round"
+        rel="stylesheet">
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
@@ -85,7 +86,7 @@
             <img src="imgs/unnamed.webp" alt="failed_load"
                 style="width: 50px; height: 50px; border-radius: 50%; cursor: pointer; ">
             <div class="tweet_box_content">
-                <input type="text" placeholder="what's happening?" style="">
+                <input type="text" placeholder="what's happening?">
                 <div class="tweet_box_icons_button">
                     <div class="tweet_box_icons" style="cursor: pointer;">
                         <span class="material-icons-round" style=" font-size: 2.1rem; color: rgb(29, 155, 240); padding: 8px 8px 8px 1px ;
@@ -103,7 +104,53 @@
 
             </div>
         </div>
-        
+        <div class="post_box">
+
+            <div class="pos_flex_box">
+                <div class="img_account_box">
+                    <img src="imgs/unnamed.webp" alt="failed to load"
+                        style=" margin: 5px 0 0 5px; width: 50px; height: 50px; border-radius: 50%; cursor: pointer;">
+                    <div class="poster_account_detail">
+                        <a href="" >ZaYnab</a>
+                        <div style="padding-top: 2px; font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">&nbsp;@zaynab3ibrahim&nbsp;</div>
+                        <div style=" padding-top: 2px;font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);"> .&nbsp;24m</div>
+                    </div>
+                    <a href="" >
+                        <span class="material-icons"> more_horiz </span>
+                    </a>
+                </div>
+
+                <p class="post_content">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto id delectus nobis sequi
+                    perspiciatis, incidunt repellendus eaque, ut sunt vel possimus, exercitationem eligendi eveniet
+                    necessitatibus minus voluptatibus autem quae omnis!
+                </p>
+                <div class="post_reaction">
+                    <span class="action_box">
+                        <span class="icon_box"><span class="material-icons-outlined">bar_chart</span></span>
+                        <span class="action_count" style="padding-top: 5px;"> 7.5K</span>
+                    </span>
+                    <span class="action_box">
+                        <span class="icon_box"><span class=" material-icons-outlined">maps_ugc</span></span>
+                        <span class="action_count">1.5K</span>
+                    </span>
+
+                    <span class="action_box">
+                        <span class="icon_box"><span class="material-icons-outlined"> cached</span></span> 
+                        <span class="action_count">2.5k</span>
+                    </span>
+                    <span class="action_box">
+                        <span class="icon_box"><span class="material-icons-outlined" >favorite_border</span></span>
+                        <span class="action_count">10.5k</span>
+                    </span>
+                    <span class="action_box">
+                        <span class="icon_box"><span class="material-icons-outlined">file_upload </span></span>
+                        <span class="action_count"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div class="right_side">
