middleSection(updating feedPostsBOx)

--- a/index.html
+++ b/index.html
@@ -107,18 +107,17 @@
         <div class="post_box">
 
             <div class="pos_flex_box">
-                <div class="img_account_box">
                     <img src="imgs/unnamed.webp" alt="failed to load"
-                        style=" margin: 5px 0 0 5px; width: 50px; height: 50px; border-radius: 50%; cursor: pointer;">
-                    <div class="poster_account_detail">
+                        style=" margin: 5px 0 0 20px; width: 50px; height: 50px; border-radius: 50%; cursor: pointer;">
+                    <span class="poster_account_detail">
                         <a href="" >ZaYnab</a>
                         <div style="padding-top: 2px; font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">&nbsp;@zaynab3ibrahim&nbsp;</div>
                         <div style=" padding-top: 2px;font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);"> .&nbsp;24m</div>
-                    </div>
-                    <a href="" >
-                        <span class="material-icons"> more_horiz </span>
-                    </a>
-                </div>
+                        <a href="" >
+                            <span class="material-icons" style="margin-left: 270px;"> more_horiz </span>
+                        </a>
+                    </span>
+                    
 
                 <p class="post_content">
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto id delectus nobis sequi
