updating left section

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div class="top_left_side">
             <a href=""><img class="twitter_icon" src="imgs/Twitter-logo.svg.webp"></a>
             <div class="top_nav">
-                <a class="icon_container" href="">
+                <a  class="icon_container" href="">
                     <span class="material-icons"> home </span>
                     <!-- <i class="material-icons"> home </i> used to indicate a technical term ,there is not a more appropriate semantic element  -->
-                    <span>Home</span>
+                    <span style="font-weight: 500;">Home</span>
                 </a>
-                <a class="icon_container" href="">
+                <a   class="icon_container" href="">
                     <span class="material-icons"> tag </span>
                     <span>Explore</span>
                 </a>
