--- a/index.html
+++ b/index.html
@@ -477,8 +477,9 @@
             <input type="text" placeholder="Search Twitter"> </div>
         
         <div class="all_trending_box">
-            <p style="padding-left: 20px; height: 40px; font-size: 2rem;font-weight: 700;
-             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">What's happening</p>
+            <!-- <p style="padding-left: 20px; height: 40px; font-size: 2rem;font-weight: 700;
+             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">What's happening</p> -->
+             <h1 style="padding-left: 20px;">What's happening</h1>
             <div class="trending_box">
                 <div class="trend_data">
                     <span style="font-size: 1.1rem;color: grey;">Trending</span>
@@ -519,12 +520,13 @@
                 </div>
                 <span class="material-icons"> more_horiz </span>
             </div>
-            <span class="show_more">Show more</span>
+            <a class="show_more">Show more</a>
         </div>
 
         <div class="all_follow_box">
-            <p  style="padding-left: 20px; height: 40px; font-size: 2rem;font-weight: 700;
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Who to follow</p>
+            <!-- <p  style="padding-left: 20px; height: 40px; font-size: 2rem;font-weight: 700;
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Who to follow</p> -->
+            <h1 style="padding-left: 20px;">Who to follow</h1>
             <div class="follw_box">
                 <img src="imgs/unnamed - Copy.webp"   style=" margin: 5px 0 0 20px; width: 50px; height: 50px; border-radius: 50%; cursor: pointer;">
                 <span class="fAccount_deatils">
