--- a/loginPage.html
+++ b/loginPage.html
@@ -47,11 +47,10 @@
            </span>
             <span class="email-box" id="email-box" style="border:1px solid rgb(228, 222, 222); height: 56px; border-radius: 5px;padding:10px 10px 10px 10px ;margin-top: 10px;">
                 <label id="label" style="font-weight: 300;font-size: 1.7rem; color: grey;">Phone, Email, or username</label>
-                <input type="text" id="email" size="20" maxlength="10" style=" margin-top: -10px; border: none;">
+                <input type="text" id="email" size="20" maxlength="60" style=" margin-top: -10px; border: none;width: 100%;">
             </span>
-            <!-- <input type="password" id="Pass" size="20"> -->
             <div class="nextbox" style="cursor: pointer; padding-top:5px;text-align:center;height:38px; margin-top: 30px; border-radius: 9999px; background-color: black;">
-                <a href="secLoginPage.html" style="color: white;">Next</a>
+                <a href="secLoginPage.html" style="color: white;">Next</a></span>
             </div>
             <div class="forgetPassword" style="cursor: pointer; padding-top: 5px; text-align: center; height:38px; margin-top: 20px; border: 1px solid rgb(228, 222, 222);border-radius: 9999px;">
                 <span ><a href="">Forget Password?</a></span>
