--- a/registrationPage.html
+++ b/registrationPage.html
@@ -46,7 +46,7 @@
                 <hr  style="width:45%;text-align:right;margin-right:0 ;border:1px solid rgb(228, 222, 222)">
            </span>
             <div class="nextbox" style="cursor: pointer; padding-top:5px;text-align:center;height:38px; margin-top: 15px; border-radius: 9999px; background-color: black;">
-                <a href="" style="color: white;">Sign up with phone or email</a></span>
+                <a href="signUp.html" style="color: white;">Sign up with phone or email</a></span>
             </div>
             <div style=" margin-top:10px;font-size: 1.2rem;color:rgb(109, 106, 106);">
                 By signing up, you agree to the <a class="link_underline" style=" font-size:1.2rem;color: rgb(29, 155, 240);">Terms of Service</a> 
