--- a/signUp.html
+++ b/signUp.html
@@ -45,7 +45,7 @@
             <div class="datebox boxOnFocus" style="display: flex;justify-content: space-between; margin-top: 10px; width: 100%;">
                 <div id="monthBox" style="display: flex; flex-direction: column; width:50%;border:1px solid rgb(228, 222, 222); border-radius: 5px;padding:10px 10px 10px 10px">
                     <label  id="labmonth" style="padding-left: 5px;font-size: 1.2rem;color: grey;">Month</label>
-                    <select id="month" style="border: none; font-weight: 400;">
+                    <select id="month" style="border: none; font-weight: 400;" required>
                         <option value=""></option>
                         <option value="1">January</option>
                         <option value="2">February</option>
@@ -63,7 +63,7 @@
                 </div>
                 <div id="dayBox"  style="display: flex; flex-direction: column; width:20%;border:1px solid rgb(228, 222, 222); border-radius: 5px;padding:10px 10px 10px 10px">
                     <label  id="labday" style="padding-left: 5px;font-size: 1.2rem;color: grey;">Day</label>
-                    <select id="day" style="border: none; font-weight: 400;">
+                    <select id="day" style="border: none; font-weight: 400;" required>
                         <option value=""></option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -100,7 +100,7 @@
                 </div>
                 <div id="yearBox" class="year boxOnFocus" style="display: flex; flex-direction: column; width:25%;border:1px solid rgb(228, 222, 222); border-radius: 5px;padding:10px 10px 10px 10px">
                     <label id="labyear" style="padding-left: 5px;font-size: 1.2rem;color: grey;">year</label>
-                    <select id="year" style="border: none; font-weight: 400;">
+                    <select id="year" style="border: none; font-weight: 400;" required>
                         <option value=""></option>
                         <option value="1">1990</option>
                         <option value="2">1991</option>
