--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div style="font-weight: 300; font-size: 1.35rem; color: rgb(110,118,125);">@zaynab3ibrahim</div>
                 </div>
                 <div>
-                    <a href="">
+                    <a href="loginPage.html">
                         <span class="material-icons"> more_horiz </span>
                     </a>
                 </div>
