--- a/loginPage.html
+++ b/loginPage.html
@@ -47,7 +47,7 @@
            </span>
             <span class="email-box" id="email-box" style="border:1px solid rgb(228, 222, 222); height: 56px; border-radius: 5px;padding:10px 10px 10px 10px ;margin-top: 10px;">
                 <label id="label" style="font-weight: 300;font-size: 1.7rem; color: grey;">Phone, Email, or username</label>
-                <input type="text" id="email" size="20" maxlength="60" style=" margin-top: -10px; border: none;width: 100%;">
+                <input type="text" id="email" size="20" maxlength="60" style=" margin-top: -10px; border: none;width: 100%;" required>
             </span>
             <div class="nextbox" style="cursor: pointer; padding-top:5px;text-align:center;height:38px; margin-top: 30px; border-radius: 9999px; background-color: black;">
                 <a href="secLoginPage.html" style="color: white;">Next</a></span>
